@@ -1,56 +1,12 @@
-package mill
-package javalib.palantirformat
+package mill.javalib.palantirformat
 
-import mill.api.{Loose, PathRef}
-import mill.define.{Discover, ExternalModule}
+import mill.api.{Ctx, PathRef}
+import mill.define.{Discover, ExternalModule, TaskModule}
 import mill.main.Tasks
-import mill.scalalib.{CoursierModule, DepSyntax, JavaModule}
+import mill.main.TokenReaders.*
+import mill.scalalib.JavaModule
 import mill.util.Jvm
-
-trait PalantirFormatBaseModule extends CoursierModule {
-
-  /**
-   * Classpath for running Palantir Java Format.
-   */
-  def palantirformatClasspath: T[Loose.Agg[PathRef]] = Task {
-    defaultResolver().resolveDeps(
-      Agg(ivy"com.palantir.javaformat:palantir-java-format:${palantirformatVersion()}")
-    )
-  }
-
-  /**
-   * JVM arguments for running Palantir Java Format. Defaults to values prescribed in
-   * "[[https://github.com/palantir/palantir-java-format/issues/548 Broken on Java 16]]".
-   */
-  def palantirformatJvmArgs: T[Seq[String]] = Task {
-    Seq(
-      "--add-exports",
-      "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-      "--add-exports",
-      "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-      "--add-exports",
-      "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-      "--add-exports",
-      "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-      "--add-exports",
-      "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
-    )
-  }
-
-  /**
-   * Path to options file for Palantir Java Format CLI. Defaults to `millSourcePath` `/` `palantirformat.options`.
-   */
-  def palantirformatOptions: T[PathRef] = Task.Source(
-    millSourcePath / "palantirformat.options"
-  )
-
-  /**
-   * Palantir Java Format version. Defaults to `2.50.0`.
-   */
-  def palantirformatVersion: T[String] = Task {
-    "2.50.0"
-  }
-}
+import mill.{Command, T, Task}
 
 /**
  * Formats Java source files using [[https://github.com/palantir/palantir-java-format Palantir Java Format]].
@@ -63,7 +19,7 @@ trait PalantirFormatModule extends JavaModule with PalantirFormatBaseModule {
    * @param check if an exception should be raised when formatting errors are found
    *              - when set, files are not formatted
    * @param sources list of file or folder path(s) to be processed
-   *                - path must be relative to [[millSourcePath]]
+   *                - path must be relative to [[moduleDir]]
    *                - when empty, all [[sources]] are processed
    */
   def palantirformat(
@@ -73,7 +29,7 @@ trait PalantirFormatModule extends JavaModule with PalantirFormatBaseModule {
 
     val _sources =
       if (sources.value.isEmpty) this.sources()
-      else sources.value.iterator.map(rel => PathRef(millSourcePath / os.RelPath(rel)))
+      else sources.value.iterator.map(rel => PathRef(moduleDir / os.RelPath(rel)))
 
     PalantirFormatModule.palantirAction(
       _sources,
@@ -84,6 +40,7 @@ trait PalantirFormatModule extends JavaModule with PalantirFormatBaseModule {
     )
   }
 }
+
 object PalantirFormatModule extends ExternalModule with PalantirFormatBaseModule with TaskModule {
 
   override def defaultCommandName(): String = "formatAll"
@@ -112,36 +69,47 @@ object PalantirFormatModule extends ExternalModule with PalantirFormatBaseModule
     )
   }
 
-  lazy val millDiscover: Discover = Discover[this.type]
+  lazy val millDiscover = Discover[this.type]
 
   private[palantirformat] def palantirAction(
       sources: IterableOnce[PathRef],
       check: Boolean,
       options: PathRef,
-      classPath: Loose.Agg[PathRef],
+      classPath: Seq[PathRef],
       jvmArgs: Seq[String]
-  )(implicit ctx: api.Ctx): Unit = {
+  )(implicit ctx: Ctx): Unit = {
+
+    val javaFiles = sources
+      .iterator
+      .map(_.path)
+      .filter(os.exists(_))
+      .flatMap(os.walk(_, includeTarget = true))
+      .filter(os.isFile)
+      .filter(_.ext == "java")
+      .toSeq
 
     if (check) {
-      ctx.log.info("checking format in java sources ...")
+      ctx.log.info(s"checking format in ${javaFiles.size} java sources ...")
     } else {
-      ctx.log.info("formatting java sources ...")
+      ctx.log.info(s"formatting ${javaFiles.size} java sources ...")
     }
 
-    palantirArgs(sources, check, options) match {
+    palantirArgs(javaFiles, check, options) match {
       case None =>
 
-        ctx.log.debug("source folder not found, skipping")
+        ctx.log.debug("No sources found, skipping")
       case Some(mainArgs) =>
 
         ctx.log.debug(s"running palantirformat with $mainArgs")
 
-        val exitCode = Jvm.callSubprocess(
+        val exitCode = Jvm.callProcess(
           mainClass = "com.palantir.javaformat.java.Main",
-          classPath = classPath.map(_.path),
+          classPath = classPath.map(_.path).toVector,
           jvmArgs = jvmArgs,
           mainArgs = mainArgs,
-          workingDir = ctx.dest,
+          cwd = ctx.dest,
+          stdin = os.Inherit,
+          stdout = os.Inherit,
           check = false
         ).exitCode
 
@@ -156,22 +124,12 @@ object PalantirFormatModule extends ExternalModule with PalantirFormatBaseModule
   }
 
   private def palantirArgs(
-      sources: IterableOnce[PathRef],
+      sourceFiles: Seq[os.Path],
       check: Boolean,
       options: PathRef
   ): Option[Seq[String]] = {
 
-    val sourceArgs = sources
-      .iterator
-      .map(_.path)
-      .filter(os.exists(_))
-      .flatMap(os.walk(_, includeTarget = true))
-      .filter(os.isFile)
-      .filter(_.ext == "java")
-      .map(_.toString())
-      .toSeq
-
-    Option.when(sourceArgs.nonEmpty) {
+    Option.when(sourceFiles.nonEmpty) {
       val args = Seq.newBuilder[String]
 
       // https://github.com/palantir/palantir-java-format/blob/dae9be4b84e2bd4d7ea346c6374fda47eee7118f/palantir-java-format/src/main/java/com/palantir/javaformat/java/CommandLineOptionsParser.java#L199
@@ -187,7 +145,7 @@ object PalantirFormatModule extends ExternalModule with PalantirFormatBaseModule
       }
 
       // https://github.com/palantir/palantir-java-format/blob/dae9be4b84e2bd4d7ea346c6374fda47eee7118f/palantir-java-format/src/main/java/com/palantir/javaformat/java/CommandLineOptionsParser.java#L49
-      args ++= sourceArgs
+      args ++= sourceFiles.map(_.toString)
 
       args.result()
     }
